# aviutl2_psdtoolkit2

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md  build.bash  installer.iss.in
.github/: RELEASE_TEMPLATE.md
.github/workflows/: releaser.yml
src/alias/: subtitles.object
src/aul2/: English.PSDToolKit.aul2
src/c/: CMakeLists.txt  PSDToolKit.ini  alias.c  alias.h  alias_test.c  anm2.c  anm2.h  anm2_edit.c  anm2_edit.h  anm2_edit_test.c  anm2_script_picker.c  anm2_script_picker.h  anm2_script_picker.rc  anm2_selection.c  anm2_selection.h  anm2_selection_test.c  anm2_test.c  anm2editor.c  anm2editor.h  anm2editor.rc  anm2editor_convert.c  anm2editor_convert.h  anm2editor_detail.c  anm2editor_detail.h  anm2editor_import.c  anm2editor_import.h  anm2editor_splitter.c  anm2editor_splitter.h  anm2editor_toolbar.c  anm2editor_toolbar.h  anm2editor_treeview.c  anm2editor_treeview.h  anm_to_anm2.c  anm_to_anm2.h  anm_to_anm2_test.c  cache.c  cache.h  cache_test.c  config.c  config.h  (+32 more)
src/cmake/: bundle_lua.cmake  bundle_multi_script.cmake  installer.cmake  version.cmake
src/go/: CMakeLists.txt  go.mod  go.sum  main.go
src/go/assets/: assets.go
src/go/gui/: async.go  gui.go  gui_gdip.go  thumbnailcache.go
src/go/img/: image.go
src/go/ipc/: ipc.go  shm.go  util.go
src/go/locale/: locale.go
src/go/nkhelper/: cgo.go  gdip.go  genrange.go  opengl.go
src/i18n/: ja.po.DO_NOT_EDIT  langs.csv  start.bash  zh_CN.po.DO_NOT_EDIT
src/lua/@PSDToolKit.anm2/: anim_bounce.lua  blinker.lua  (+4 more)
src/template/: psd.object.template  voice.object.template
(+58 files in other folders)
